Messing with CSS. Having issues.
Asked friends about some layout issues I'm having. Will update after receiving answers.

--- a/app.css
+++ b/app.css
@@ -23,9 +23,13 @@ h1 {
     font-size: 100px;
     font-family: 'Updock', cursive;
     margin: 20PX 0PX 20PX;
+    padding: 10px 10px;
     background-color: red;
     border: 1PX SOLID black;
     height: 125PX;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .item-1 {
@@ -34,6 +38,8 @@ h1 {
 
 .item-2 {
     display: flex;
+    padding: 10px;
+    margin-left: 50px;
 }
 
 .item-1 .item-2 {}
